# CIMS-backend

./: .dockerignore  .gitignore  .spacecompiler  APIDocument.md  CIMS.py  CIMS.spacescript  CLI.py  CLIcommands.json  DQEv2.py  DQEv3.py  DQEv4.py  DQEv5.py  DQEv6.py  DQEv7.py  DatasQuickEditor.py  Dockerfile  ManagementServerConnection.py  Persist.json  QuickValues.py  README.md  ServerPresentation.ipynb  Settings.json  TempEditor.py  install.sh  main.py  nuitka-build.bat  package.json  project.json  project_info.json  pyproject.toml  requirements.txt  start.py  updater.py  vercel.json
.github/workflows/: docker-publish.yaml  nuitka.yml
Datas/: .gitignore  __init__.py  client_status.json  clients.json  get.py  pre_register.json  profile_config.json  reader.py
Datas/ClassPlan/: default.json
Datas/ClassPlans/: 26077a30-7859-49c0-aab3-9e04c3ffa270.json
Datas/DefaultSettings/: 26077a30-7859-49c0-aab3-9e04c3ffa270.json
Datas/Manifests/: 26077a30-7859-49c0-aab3-9e04c3ffa270.json  default.json
Datas/Policies/: default.json
Datas/Policy/: default.json
ManagementServer/: __init__.py  api.new.py  api.py  command.new.py  command.py  gRPC.new.py  gRPC.py
ManagementServer.vercel/: __init__.py  api.py  command.py  gRPC.py
ManagementServerConnection/: __init__.py
Protobuf/: .gitignore  __init__.py
launcher/: __init__.py
logger/: __init__.py
webui/: .env.production  .eslintrc.js  .gitignore  README.md  index.html  jsconfig.json  main.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vue.config.js  webpack.config.js
webui/public/: index.html
(+81 files in other folders)
