[project]
name = "ClassIslandManagementServer.py"
version = "0.0.0.031b"
description = "ClassIslandManagementServer.py"
authors = [
    {name = "kaokao221"}
]
dependencies = [
    "grpcio~=1.70.0",
    "protobuf~=5.29.3",
    "google~=3.0.0",
    "aiohttp~=3.11.12",
    "fastapi~=0.115.8",
    "uvicorn~=0.34.0"
]